// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Film cards list should render for like this 1`] = `
<div
  className="catalog__movies-list catalog--like-this"
/>
`;

exports[`Film cards list should render for main 1`] = `
<div
  className="catalog__movies-list "
/>
`;
